--- a/css-properties/css/style.css
+++ b/css-properties/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     width: 70%;
     margin: 30px auto;
 }
@@ -19,6 +19,7 @@ body {
 .content {
     font-size: 14px;
     line-height: 22px;
+    margin: 20px 0;
 }
 
 #first-para {
