--- a/user-profile/src/App.css
+++ b/user-profile/src/App.css
@@ -1,4 +1,16 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
+/* @media (max-width: 1024px) {
+  .list {
+    width: 40%;
+  }
 } */
+
+body {
+  background: rgba(255, 0, 0, 1);
+  background: linear-gradient(
+    0deg,
+    rgba(249, 253, 45, 1) 0%,
+    rgba(232, 105, 47, 1) 36%,
+    rgba(255, 0, 0, 1) 70%,
+    rgba(204, 5, 153, 1) 100%
+  );
+}
