Added movie details

--- a/star-wars/src/assets/scss/_colors.scss
+++ b/star-wars/src/assets/scss/_colors.scss
@@ -7,6 +7,7 @@ $clr-BLACK: #000;
 $clr-BLUE: #2098d1;
 $clr-BORDER: #3c3c3c;
 $clr-white: #fff;
+$clr-BACKGROUND: #232323;
 
 $clr-BOX_SHADOW_PRIMARY: 0px 0px 10px 3px transparent, 0px 0px 10px $clr-BLACK;
 $clr-BOX_SHADOW_PRIMARY_HOVER: 0px 0px 10px 3px $clr-BLUE,
